<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.curiousfreaks.greword.MainActivity"
    android:background="@drawable/bg_gradient">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/activityMainLayout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@mipmap/bg_main"
            android:alpha="0.5"/>

        <ProgressBar
            android:id="@+id/downloadProgressBar"
            style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:visibility="invisible"
            android:min="0"
            />

        <TextView
            android:id="@+id/downloadProgressText"
            android:layout_below="@+id/downloadProgressBar"
            android:layout_alignParentStart="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:visibility="invisible"
            />
        <LinearLayout
            android:id="@+id/layoutFirst"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/layoutSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/allwords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dictionary"
                android:theme="@style/buttonThemeGreenCircleNew"
                android:background="@drawable/button_ripple_round_green"
                android:layout_margin="5dp"
                />
            <Button
                android:id="@+id/barron333"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/barrons333"
                android:theme="@style/buttonThemeGreenCircleNew"
                android:background="@drawable/button_ripple_round_green"
                android:layout_margin="5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutSecond"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/mywordslist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_words"
                android:theme="@style/buttonThemeGreenCircleNew"
                android:background="@drawable/button_ripple_round_green"
                android:layout_margin="5dp"
                />
            <Button
                android:id="@+id/buyCoffee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buy_coffee"
                android:theme="@style/buttonThemeRedCircleNew"
                android:background="@drawable/button_ripple_round_red"
                android:layout_margin="5dp"
                />
            <Button
                android:id="@+id/flashcards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flash_card_spaced"
                android:theme="@style/buttonThemeGreenCircleNew"
                android:background="@drawable/button_ripple_round_green"
                android:layout_margin="5dp"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/layoutThird"
            android:layout_below="@+id/layoutSecond"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/manageNotifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manage_notifications"
                android:theme="@style/buttonThemeGreenCircleNew"
                android:background="@drawable/button_ripple_round_green"
                android:layout_margin="5dp"
                />
            <Button
                android:id="@+id/reportAnIssue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_issue"
                android:theme="@style/buttonThemeGreenCircleNew"
                android:background="@drawable/button_ripple_round_green"
                android:layout_margin="5dp"
                />

        </LinearLayout>

        <Button
            android:id="@+id/speechRecognize"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_voice_search"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/adView"
            />
        <Button
            android:id="@+id/newWordEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/word_add_new"
            android:theme="@style/buttonThemeGreenCircleNew"
            android:background="@drawable/button_ripple_round_green"
            android:visibility="gone"
            />
        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
        </com.google.android.gms.ads.AdView>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
